--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,15 +1,25 @@
+@import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+@font-face {
+  font-family: plus jakata sans;
+  src: url(../assets/fonts/PlusJakartaSans-Bold.ttf);
+}
+body {
+  font-family: Helvetica, sans-serif;
+  color: white;
+}
+
 .banner {
-  background-image: url(../assets/assets.png);
+  background-image: url(../assets/images/banner.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 1em 2em;
+  padding: 2em 4em;
   box-shadow: inset 0 0 250px 300px rgba(0, 0, 0, 0.7);
   height: 100vh;
 }
@@ -21,14 +31,18 @@
 .banner .navbar .left {
   display: flex;
   align-items: center;
-  gap: 2em;
+  gap: 4em;
 }
-.banner .navbar .left .links li {
+.banner .navbar .left .links ul {
+  display: flex;
+}
+.banner .navbar .left .links ul li {
   display: flex;
   align-items: center;
-  gap: 1em;
+  padding: 0.5em 1em;
+  gap: 0.5em;
 }
-.banner .navbar .left a {
+.banner .navbar .left .links ul a {
   text-decoration: none;
   color: white;
 }
@@ -36,4 +50,55 @@
   display: flex;
   align-items: center;
   gap: 1em;
+}
+.banner .bannerText {
+  position: relative;
+  top: 23em;
+  display: flex;
+  gap: 7em;
+}
+.banner .bannerText p.main {
+  color: white;
+  flex: 1;
+  font-family: plus jakata sans;
+  text-transform: uppercase;
+  font-size: 4em;
+  font-weight: 800px;
+}
+.banner .bannerText .aside {
+  flex: 1;
+  display: flex;
+  align-items: end;
+  padding-bottom: 1em;
+  display: flex;
+  justify-content: space-between;
+}
+.banner .bannerText .aside .textContent {
+  flex: 1em;
+  display: grid;
+  gap: 2em;
+}
+.banner .bannerText .aside .button {
+  display: flex;
+}
+.banner .bannerText .aside .action {
+  flex: 0.3em;
+  text-align: end;
+}
+
+.keyFeatures {
+  border-radius: 3em 3em 0 0;
+  position: relative;
+  top: -4em;
+  color: black;
+  display: grid;
+  gap: 3em;
+  background-color: white;
+  padding: 3em 4em;
+}
+.keyFeatures h2 {
+  text-align: center;
+  font-family: plus jakata sans;
+  font-size: 2.5em;
+  font-weight: 700;
 }/*# sourceMappingURL=styles.css.map */
