--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,12 +3,23 @@
   padding: 0;
   box-sizing: border-box;
 }
+// import font
+@font-face {
+  font-family: plus jakata sans;
+  src: url(../assets/fonts/PlusJakartaSans-Bold.ttf);
+}
+@import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
+body {
+  font-family: Helvetica, sans-serif;
+  // font-size: 2em;
+  color: white;
+}
 .banner {
-  background-image: url(../assets/assets.png);
+  background-image: url(../assets/images/banner.png);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  padding: 1em 2em;
+  padding: 2em 4em;
   box-shadow: inset 0 0 250px 300px rgba(0, 0, 0, 0.7);
   height: 100vh;
   .navbar {
@@ -18,15 +29,19 @@
     .left {
       display: flex;
       align-items: center;
-      gap: 2em;
-      .links li {
+      gap: 4em;
+      .links ul {
         display: flex;
-        align-items: center;
-        gap: 1em;
-      }
-      a {
-        text-decoration: none;
-        color: white;
+        li {
+          display: flex;
+          align-items: center;
+          padding: 0.5em 1em;
+          gap: 0.5em;
+        }
+        a {
+          text-decoration: none;
+          color: white;
+        }
       }
     }
     .right {
@@ -34,5 +49,55 @@
       align-items: center;
       gap: 1em;
     }
+  }
+  .bannerText {
+    position: relative;
+    top: 23em;
+    display: flex;
+    gap: 7em;
+    p.main {
+      color: white;
+      flex: 1;
+      font-family: plus jakata sans;
+      text-transform: uppercase;
+      font-size: 4em;
+      font-weight: 800px;
+    }
+    .aside {
+      flex: 1;
+      display: flex;
+      align-items: end;
+      padding-bottom: 1em;
+      display: flex;
+      justify-content: space-between;
+      .textContent {
+        flex: 1em;
+        display: grid;
+        gap: 2em;
+      }
+      .button {
+        display: flex;
+      }
+      .action {
+        flex: 0.3em;
+        text-align: end;
+      }
+    }
+  }
+}
+.keyFeatures {
+  border-radius: 3em 3em 0 0;
+  position: relative;
+  top: -4em;
+  color: black;
+  display: grid;
+  gap: 3em;
+  background-color: white;
+  padding: 3em 4em;
+  h2 {
+    text-align: center;
+    font-family: plus jakata sans;
+    font-size: 2.5em;
+    font-weight: 700;
   }
 }
